--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,9 +8,10 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>Soul Web Proxy</title>
 	</head>
 	<body>
-		<h1>Astro</h1>
+		<h1>Soul Web Proxy</h1>
+		<p>Welcome to the Soul Web Proxy application.</p>
 	</body>
 </html>
